--- a/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
+++ b/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
@@ -51,12 +51,12 @@
                      <li class="nav-item avatar dropdown">
                         <a class="nav-link " id="navbarDropdownMenuLink-55" data-toggle="dropdown" aria-expanded="false">
                            <div id="profileImageNavbarDiv">
-                              <img src="~/profileImages/@User.Claims.FirstOrDefault(x => x.Type.Equals("profileImage")).Value" />
+                              <img src="~/profileImages/@User.Claims.FirstOrDefault(x => x.Type.Equals("profileImage"))?.Value" />
                            </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-lg-right greyBackground"
                              aria-labelledby="navbarDropdownMenuLink-55">
-                           <a class="dropdown-item" href="/Users/@User.Claims.FirstOrDefault(x => x.Type.Equals("channelName")).Value.Replace(" ", "-")">My profile</a>
+                           <a class="dropdown-item" href="/Users/@User.Claims.FirstOrDefault(x => x.Type.Equals("channelName"))?.Value.Replace(" ", "-")">My profile</a>
                            <a class="dropdown-item" href="/Logout">Log out</a>
                         </div>
                      </li>
@@ -91,7 +91,7 @@
 
    <footer class="border-top footer text-muted">
       <div class="container">
-         &copy; 2019 - EduTube.GUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+         &copy; 2019 - EduTube.GUI
       </div>
    </footer>
 
