--- a/EduTube/EduTube.GUI/Views/Home/Index.cshtml
+++ b/EduTube/EduTube.GUI/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
          <a href="/Users/@video.UserChannelName.Replace(" ", "-")">
             <p class="text-white fontSize08">@video.UserChannelName</p>
          </a>
-         <p class="fontSize08">@video.DateCreatedOn</p>
+         <p class="fontSize08">@video.DateCreatedOn.ToString("yyyy-MM-dd hh:mm")</p>
       </div>
    }
 </div>
