--- a/EduTube/EduTube.GUI/wwwroot/css/CreateVideo.css
+++ b/EduTube/EduTube.GUI/wwwroot/css/CreateVideo.css
@@ -16,6 +16,19 @@
 #thumbnail{
    height:15rem;
 }
+
+#backToProfileBtn {
+   cursor: pointer;
+   color: white;
+   border: none;
+   box-shadow: 0 10px 30px rgba(0,0,0,.2);
+   background-color: transparent !important;
+   padding: 0.25rem;
+}
+   #backToProfileBtn:hover {
+      box-shadow: 0 10px 30px rgba(0,0,0,.5);
+      background-color: transparent !important;
+   }
 /*#tagsInput_tag{
    color:white;
 }
