--- a/EduTube/EduTube.GUI/Views/Videos/SingleVideo.cshtml
+++ b/EduTube/EduTube.GUI/Views/Videos/SingleVideo.cshtml
@@ -366,18 +366,21 @@
                   </h4>
                </div>
                <!-- Modal body -->
-               <div class="modal-body" style="height: 12rem !important;">
-                  <div class="col-12">
-                     <h5 class="text-center">You need invitation code to see this video</h5>
-                  </div>
-                  <div class="col-12">
-                     <input class="form-control" placeholder="Invitation code" id="invatationCode" />
-                     <span style="color:red;" id="invitationCodeError"></span>
-                  </div>
-                  <div class="col-12">
-                     <button class="purpleBtn" id="invatationCodeBtn" onclick="CheckInvitationCode()">Submit</button>
-                  </div>
-               </div>
+					<div class="modal-body" style="height: 12rem !important;">
+						<div class="col-12">
+							<h5 class="text-center">You need invitation code to see this video</h5>
+						</div>
+						<div class="col-12">
+							<input class="form-control" placeholder="Invitation code" id="invatationCode" />
+							<span style="color:red;" id="invitationCodeError"></span>
+						</div>
+						<div class="col-12">
+							<button class="purpleBtn" id="invatationCodeBtn" onclick="CheckInvitationCode()">Submit</button>
+						</div>
+						<div class="col-12">
+							<button class="" id="backToHome" onclick='RedirectTo("/Home")'>Back to home</button>
+						</div>
+					</div>
             </div>
          </div>
       </div>
